test/src/parseErrors/ioBind.cl
include node-core


a = do


c = 5
